conf/iptables.v4
# Generated
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:CHECK_INPUT - [0:0]
-A INPUT -j CHECK_INPUT
-A INPUT -j DROP
-A CHECK_INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A CHECK_INPUT -i lo -j ACCEPT
-A CHECK_INPUT -s 116.203.249.206 -j ACCEPT
-A CHECK_INPUT -s v1.dkmartech.com -j ACCEPT
-A CHECK_INPUT -s v2.dkmartech.com -j ACCEPT

#dep-1_certificate_update_access
-A CHECK_INPUT -s 162.55.182.117 -p tcp --dport 22 -j ACCEPT

#Prometheus-access
-A CHECK_INPUT -s 162.55.179.41/32 -p tcp --dport 9100 -j ACCEPT
COMMIT
